[package]
name = "golems"
version = "0.1.0"
authors = ["RedEyedMars <greg_estouffey@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.63"
nodejs-helper = "0.0.3"

failure = "0.1"
soa_derive = "0.8.1"
half = "1.1.1"
image = "0.22.1"
rand = "0.7.3"

packed_simd = "0.3.3"
generational-arena = "0.1"
maplit = "1.0.2"



# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
